--- a/app.config
+++ b/app.config
@@ -1,4 +1,4 @@
 app = Flask(__name__)
 app.config['SECRET_KEY'] = 'you-will-never-guess'
-
+ap.config['MS_TRANSLATOR_KEY'] = 'd8235bc47f40428991739e4513f7a32d'
 # ... add more variables here as needed
